# chaos-secrets

./: PKGBUILD  pyproject.toml
src/chaos_secrets/explanations/secrets/: secrets.py
src/chaos_secrets/roles/secrets/: secrets.py
